--- a/03 - CSS Variables/index-START.html
+++ b/03 - CSS Variables/index-START.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Scoped CSS Variables and JS</title>
-  <link rel="stylesheet" href="index.css">
+  <link rel="stylesheet" href="index.css" type="text/css">
 </head>
 
 <body>
