--- a/05 - Flex Panel Gallery/index-START.html
+++ b/05 - Flex Panel Gallery/index-START.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Flex Panels 💪</title>
-  <link href="./index.css" rel="stylesheet" type="text/css">
+  <link href="index.css" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Amatic+SC' rel='stylesheet' type='text/css'>
 </head>
 
@@ -37,7 +37,7 @@
     </div>
   </div>
 
-  <script src="./index.js" type="text/javascript"></script>
+  <script src="index.js" type="text/javascript"></script>
 </body>
 
 </html>
