--- a/08 - Fun with HTML5 Canvas/index-START.html
+++ b/08 - Fun with HTML5 Canvas/index-START.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>HTML5 Canvas</title>
+  <link rel="stylesheet" href="index.css" type="text/css">
 </head>
+
 <body>
-<canvas id="draw" width="800" height="800"></canvas>
-<script>
-</script>
-
-<style>
-  html, body {
-    margin: 0;
-  }
-</style>
-
+  <canvas id="draw" width="800" height="800"></canvas>
+  <script type="text/javascript" src="index.js"></script>
 </body>
+
 </html>
